Añadido posicion fixed para el menu de navegación, el contenedor de filtro por publicaciones (categoria) asi siempre seran visibles aunque bajemos en la web y bloque de espaciado sin fondo para obtener un espaciado con respecto a la parte superior de la ventana de la web.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.bloque-menu-nav{
+    height: 9.2vh;
+}
+
 #btn-filtros {
     border-radius: 5px 5px 0px 0px;
 }
